Alignment fixes

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -52,6 +52,10 @@ a {
   text-decoration: inherit;
 }
 
+nav {
+  cursor: pointer;
+}
+
 .sr-only {
   position: absolute;
   width: 1px;
@@ -64,14 +68,20 @@ a {
 }
 
 .overlay {
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: $clr-neutral-300;
-    opacity: 0.85;
-		transition: 350ms cubic-bezier(0.42, 0, 0.58, 1);
-		z-index: 1000;
+  position: absolute;
+  background: $clr-neutral-200;
+  transition: 350ms ease-in-out;
+  z-index: 1000;
+}
+
+.overlay:after {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.5);
+  left: 0;
+  top: 0;
+  z-index: 0;
 }
 
 .App {
@@ -123,17 +133,18 @@ a {
     background: $clr-neutral-100;
 
     .nav-arrow-icon {
-        display: none;
+      position: absolute;
+      margin-left: .6rem;
+      margin-top: 2rem;
+      width: .75rem;
     }
 
     .logo-img {
-      color: white;
-      font-size: 27px;
-      font-weight: 600;
       line-height: 70px;
-      max-width: 5rem;
       object-fit: contain;
-      margin: 0 2rem;
+      width: 6rem;
+      margin-left: clamp(.8rem, 5vw, 6rem);
+      margin-right: clamp(.5rem, 3vw, 4rem);
     }
 
     &::after {
@@ -158,7 +169,7 @@ a {
           text-decoration: none;
           line-height: 70px;
           font-size: 18px;
-          padding: 8px 15px;
+          padding-inline: clamp(.2rem, 1.25vw, 10rem);
           text-decoration: underline 0.15em rgba(0, 0, 0, 0);
           transition: text-decoration-color 300ms;
 
@@ -203,10 +214,21 @@ a {
             line-height: 50px;
           }
         }
+
+        .features-list, img {
+          width: .9rem;
+        }
+
+        .company-list, li {
+          margin-inline-start: 1rem;
+        }
       }
-    }
-    .login-nav {
-      padding-left: 5rem;
+
+      
+
+      #career-li {
+        margin-right: clamp(.5rem, .7rem, 1rem);
+      }
     }
   }
 
@@ -228,7 +250,7 @@ a {
       max-width: 30rem;
       max-height: 45rem;
       object-fit: contain;
-      margin-right: 3rem;
+      margin-right: clamp(1rem, 6vw, 10rem);
 
       h1 {
         margin-bottom: 3rem;
@@ -241,12 +263,14 @@ a {
     }
 
     .sponsors-img>* {
-      margin-inline-end: 1rem;
+      justify-content: flex-end;
+      padding-inline-end: clamp(1rem, 3vw, 2rem);
     }
 
     .main-hero-img {
       min-width: 20rem;
       max-height: 40rem;
+      max-height: clamp(35rem, 50vw, 40rem);
       object-fit: contain;
       width: auto;
       height: auto;
@@ -304,7 +328,7 @@ a {
       }
 
       .nav-arrow-icon {
-        margin-left: 1rem;
+        margin-left: clamp(.5rem, .7vw, 1rem)
       }
 
       .logo-img {
@@ -317,7 +341,6 @@ a {
       }
 
       .login-nav {
-        padding-right: 2rem;
 
         .black-outline-btn {
           padding: .7rem 5rem;
@@ -353,7 +376,7 @@ a {
       margin-bottom: 2rem;
     }
     .black-btn {
-      margin-bottom: 4rem;
+      margin-bottom: clamp(1.5rem, 2vw, 5rem);
     }
   }
 
